--- a/css/shivam-code.css
+++ b/css/shivam-code.css
@@ -77,3 +77,15 @@ align-self: center;
 font-size: 20px;
 }
 
+.skill-list{
+  list-style: none;
+}
+.skill-list > li {
+  font-size: 18px;
+  text-align: center;
+}
+
+.fil{
+  min-height: 100%;
+  height: 100%;
+}
