--- a/css/shivam-code.css
+++ b/css/shivam-code.css
@@ -68,22 +68,30 @@ padding: 0px !important;
 margin-top: 50px;
 }
 
-.navbar-default .navbar-nav > li > a:hover{
-	color : #fff !important;
-	background-color: #333;
-	border-radius : 10px;
-}
+
 .container-title {
-align-self: center;
-font-size: 20px;
+font-size: 36px;
+text-transform: uppercase;
 }
 
 .skill-list{
   list-style: none;
 }
 .skill-list > li {
-  font-size: 18px;
-  text-align: center;
+	display: inline-block;
+   border-radius: 5%;
+    color: #ffffff;
+    font-size: 20px;
+    margin: 7px;
+    text-align: center;
+     padding-left: 16px;
+    padding-right: 16px;
+}
+ .skill-list > li:nth-child(odd) {
+     background-color: #f0ad4e;
+}
+ .skill-list > li:nth-child(even) {
+     background-color: #5cb85c;
 }
 
 .abt{
@@ -94,12 +102,16 @@ font-size: 20px;
   padding: 20px;
 text-align: center;
   text-transform: uppercase;
+  animation: animatetop 3s;
+
 }
+@keyframes animatetop{from{left:-300px; opacity:0} to{left:0; opacity:1}}
 .home h1{
  
   font-weight: 600;
   font-size: 88px; 
   color: #15294d;
+  
 }
 .home p{
 font-size: 30px;
@@ -122,4 +134,13 @@ font-size: 30px;
 	-webkit-filter: grayscale(100%); 
     filter: grayscale(100%);
 }
+
+@media only screen and (min-width : 768px) {
+    /* Make Navigation Toggle on Desktop Hover */
+    .dropdown:hover .dropdown-menu {
+        display: block;
+    }
+}
+
+
 
