--- a/css/shivam-code.css
+++ b/css/shivam-code.css
@@ -79,7 +79,7 @@
 .skill-list>li {
 	display: inline-block;
 	border-radius: 5%;
-	color: #ffffff;
+	color: #32415c;
 	font-size: 15px;
 	margin: 7px;
 	text-align: center;
